# PumpController

./: .gitignore  Pipfile  PumPyWorm.spec  PumpController.py  README.md  pyproject.toml  requirements.txt
src/PumPyWorm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pumpcontroller/: __init__.py  constants.py  main.py
src/pumpcontroller/classes/: conductivity.py  dialogs.py  plotwidget.py  protocol.py  tablemodel.py  threads.py
src/pumpcontroller/ui/: form.ui  ui_form.py  ui_ports.py
src/pumpyworm/: __init__.py  main.py
src/pumpyworm/classes/: tablemodel.py
src/pumpyworm/ui/: form.ui  ui_form.py
